Add a billion loot modifiers